--- a/style.css
+++ b/style.css
@@ -210,13 +210,13 @@ body {
     z-index: 1;
     box-shadow: 
         /* top */
-        inset 0 5px black,
-        inset 0 7px white,
+        inset 0 2px black,
+        inset 0 5px white,
         /* bottom */
-        inset 0 -5px black,
+        inset 0 -2px black,
         /* sides */
-        inset 4px 0 black,
-        inset -4px 0 black
+        inset 2px 0 black,
+        inset -2px 0 black
 }
 .custom-options {
     display: flex;
@@ -257,4 +257,10 @@ body {
     left: 50%;
     transform: translateX(-50%);
     font-size: 2vmin;
+    width: 100%;
+    padding-left: 2vmin;
+}
+
+.custom-option:active {
+    text-decoration: underline;
 }
