--- a/style.css
+++ b/style.css
@@ -248,9 +248,10 @@ body {
 }
 
 #pokemon-image {
-    height: 16vmin;
+    position: absolute;
+    height: 20vmin;
     width: auto;
-    margin-top: 8vmin;
+    transform: translateY(75%);
     z-index: 0;
 }
 
