--- a/style.css
+++ b/style.css
@@ -235,7 +235,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
 }
 
 #pokemon-name {
@@ -248,10 +247,10 @@ body {
 }
 
 #pokemon-image {
-    position: absolute;
+    position: relative;
     height: 20vmin;
     width: auto;
-    transform: translateY(75%);
+    transform: translateY(15%);
     z-index: 0;
 }
 
