--- a/style.css
+++ b/style.css
@@ -207,8 +207,9 @@ body {
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    padding: 1vmin;
     text-align: center;
+    background: #FFFFFF;
+    font-size: 1vmin;
 }
 
 #share-button {
